--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -25,3 +25,4 @@ h1.main-heading{ margin-bottom: 20px;font-size:30px;margin-top:10px;color:#00008
 .calorie-count li{min-height:70px; min-width:40px;}
 .suggestions-container{margin-top:50px;}
 }
+.odometer{font-size: 65px;}
