--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -19,6 +19,9 @@ body{font-family: "Myriad Pro", Verdana, Calibri, sans-serif;color:#777}
 .height-container select.form-control{margin-bottom:10px;}
 footer{margin-top:50px; text-align:center;}
 h1.main-heading{ margin-bottom: 20px;font-size:30px;margin-top:10px;color:#00008B;	text-shadow: 5px 5px 5px #ccc;}
+.final-result{margin-top:30px}
+.final-result .result-box{background:#910000;padding:20px;color:#fff;font-size:30px;border-radius:8px;}
+
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 .content-box h2{font-size:20px;}
