--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,5 +1,13 @@
 body{font-family: "Myriad Pro", Verdana, Calibri, sans-serif;color:#777}
-.header{margin-top:20px}
+.header{margin-top:0px; background: #c9de96; /* Old browsers */
+background: -moz-linear-gradient(top,  #c9de96 0%, #8ab66b 44%, #398235 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#c9de96), color-stop(44%,#8ab66b), color-stop(100%,#398235)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #c9de96 0%,#8ab66b 44%,#398235 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #c9de96 0%,#8ab66b 44%,#398235 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #c9de96 0%,#8ab66b 44%,#398235 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #c9de96 0%,#8ab66b 44%,#398235 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9de96', endColorstr='#398235',GradientType=0 ); /* IE6-9 */
+}
 .jumbotron{margin-top:30px}
 .content-box .jumbotron{background:#171717;padding:20px;}
 .content-box h2, .content-box p, .content-box span, .content-box li{color:#fff;}
@@ -21,7 +29,12 @@ body{font-family: "Myriad Pro", Verdana, Calibri, sans-serif;color:#777}
 .main-wrapper .height-container select.form-control{width:30%;}
 .height-container select.form-control{margin-bottom:10px;}
 footer{margin-top:50px; text-align:center;}
-h1.main-heading{ background:#000A9A;border-radius: 5px;color: #fff;font-size: 30px;margin-bottom: 20px;margin-top: 10px;padding: 10px 10px 13px 10px;}
+h1.main-heading{ border-radius: 5px;
+color: #fff;
+font-size: 20px;
+margin-bottom: 20px;
+margin-top: 0px;
+padding: 17px 10px 13px 10px;}
 .final-result{margin-top:10px}
 .final-result .result-box{background:#910000;padding:10px 20px;color:#fff;font-size:30px;border-radius:8px;}
 .final-result .result-box h2{padding:0px;margin:0px;}
