--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -31,6 +31,7 @@ h1.main-heading{ border-radius: 5px;color: #fff;font-size: 20px;margin-bottom: 2
 .popupP{text-align: center;font-size: 17px;width: 80%;margin: 0 auto;line-height: 25px;}
 .page{display: none;}
 #page1{display: block;}
+.main-wrapper{margin-top:10px;}
 .main-wrapper .form-group.food-container{background:#FF8E04;padding:6px 0 10px 6px}
 .main-wrapper .food-container label{color:#fff;}
 .main-wrapper .food-container #foodItem{width:80%}
@@ -40,11 +41,16 @@ h1.main-heading{ border-radius: 5px;color: #fff;font-size: 20px;margin-bottom: 2
 .header .navbar-nav{float:right;}
 .header .navbar-nav a{color:#fff;}
 .header .navbar-nav a:hover{background:#f4cc66;}
+.date-container{background:#FF8E04;padding:6px 0 10px 6px;font-size:20px;color:#fff;text-align:center;}
+.header .navbar{margin:0px;}
+.container-topmargin{margin-top:60px;}
 @media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
 .content-box h2{font-size:20px;}
 .calorie-count li{min-height:70px; min-width:40px;}
 .content-box .odometer{font-size:45px;}
 .suggestions-container{margin-top:20px;}
 .header .navbar-nav{float:none;}
+.header{ margin-bottom: 45px; margin-top: 0; min-height: 40px; position: fixed; top: 0; width: 100%; z-index: 5000;}
+.topmargin{margin-top:51px;}
 }
 
