--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -44,6 +44,9 @@ h1.main-heading{ border-radius: 5px;color: #fff;font-size: 20px;margin-bottom: 2
 .nutrition .jumbotron h2{margin:0px;color:#000;font-size:16px;}
 .nutrition .jumbotron p{color:#777}
 .final-result p{font-size:30px;margin:0;padding:0;}
+h2.heading{background:#ff8e04; padding: 6px 0 10px 6px;color:#fff;border-radius:8px;}
+#page4 .table th{font-size:16px;}
+#page4 .bs-example{padding-top:20px;}
 @media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
 .modal{margin-top:50px}
 .content-box h2{font-size:20px;}
