--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -47,6 +47,7 @@ h1.main-heading{ border-radius: 5px;color: #fff;font-size: 20px;margin-bottom: 2
 h2.heading{background:#ff8e04; padding: 6px 0 10px 6px;color:#fff;border-radius:8px;}
 #page4 .table th{font-size:16px;}
 #page4 .bs-example{padding-top:20px;}
+footer p{font-size:11px;}
 @media only screen and (min-device-width : 320px) and (max-device-width : 768px) {
 .modal{margin-top:50px}
 .content-box h2{font-size:20px;}
